--- a/package.json
+++ b/package.json
@@ -14,19 +14,23 @@
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
     "@mui/x-date-pickers": "^7.22.1",
+    "@zxing/library": "^0.21.3",
     "classnames": "^2.5.1",
     "datatables.net-dt": "^2.1.8",
     "datatables.net-react": "^1.0.0",
     "dayjs": "^1.11.13",
     "next": "14.2.15",
     "next-auth": "^4.24.10",
+    "pako": "^2.1.0",
     "prop-types": "^15.8.1",
+    "qrcode.react": "^4.1.0",
     "react": "^18",
     "react-dom": "^18",
     "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pako": "^2.0.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
