--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "target": "ES6",
     "lib": [
       "dom",
       "dom.iterable",
@@ -33,7 +34,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "build/types/**/*.ts"
-  ],
+, "components/QRcode/adminQRCode.js"  ],
   "exclude": [
     "node_modules"
   ]
