Fixing placeholder selection error, added env var for frontend url

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 NEXTAUTH_SECRET=COMRQFATRQE4534UCOUNT224FFS
 NEXTAUTH_URL=http://localhost:3000
 
+NEXT_PUBLIC_UCOUNT_URL=http://localhost:3000
 NEXT_PUBLIC_UCOUNT_BACKEND_URL=http://127.0.0.1:8000
 NEXT_PUBLIC_UCOUNT_FRONTEND_URL=http://localhost:3000
 NEXT_PUBLIC_UCOUNT_SESSION_EVENT_KEY=ucount_event
